[gd_scene load_steps=2 format=3 uid="uid://d21gdasnvn8pg"]

[ext_resource type="Script" uid="uid://dj4h24vg4jten" path="res://scripts/wave_manager.gd" id="1_wave"]

[node name="WaveManager" type="Node2D"]
script = ExtResource("1_wave")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="WaveTimer" type="Timer" parent="."]
